<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/event_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_id"
            app:layout_constraintBottom_toTopOf="@+id/medication_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/medication_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medication_name"
            app:layout_constraintBottom_toTopOf="@+id/medication_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_id" />

        <TextView
            android:id="@+id/medication_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medication_type"
            app:layout_constraintBottom_toTopOf="@+id/timestamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_name" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medication_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>